fixed issue with browser bars covering content

--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -87,6 +87,7 @@
 
     &__RelatedList {
         display: flex;
+        flex-flow: row wrap;
         list-style-type: none;
     }
 
