--- a/src/components/ProductPage/ProductPageRelated/ProductPageRelated.scss
+++ b/src/components/ProductPage/ProductPageRelated/ProductPageRelated.scss
@@ -1,86 +1,87 @@
 @import "../../../styles/vars.scss";
 
 .ProductPageRelated {
-  &__RelatedList {
-    margin-top: 2rem;
-    display: flex;
-    list-style-type: none;
-  }
-
-  &__Related {
-    margin-bottom: 25px;
-  }
-
-  &__RelatedItem {
-    width: 30px;
-    height: 30px;
-    position: relative;
-    margin-right: 16px;
-    cursor: pointer;
-    border-radius: 50%;
-    border: 0.5px solid #ccc;
-    &::after {
-      transition: all 0.3s;
-      content: "";
-      position: absolute;
-      width: 40px;
-      height: 40px;
-      border: 2px solid #fff;
-      box-sizing: border-box;
-      border-radius: 50%;
-      left: -5px;
-      top: -5px;
+    &__RelatedList {
+        margin-top: 2rem;
+        display: flex;
+        flex-flow: row wrap;
+        list-style-type: none;
     }
 
-    &:hover::after {
-      border: 2px solid #969696;
+    &__Related {
+        margin-bottom: 25px;
     }
 
-    &--choosen {
-      width: 40px;
-      height: 40px;
-      transform: translate(-1px, -5px);
-      box-sizing: border-box;
-      position: relative;
-      margin-right: 11px;
+    &__RelatedItem {
+        width: 30px;
+        height: 30px;
+        position: relative;
+        margin-right: 16px;
+        cursor: pointer;
+        border-radius: 50%;
+        border: 0.5px solid #ccc;
+        &::after {
+            transition: all 0.3s;
+            content: "";
+            position: absolute;
+            width: 40px;
+            height: 40px;
+            border: 2px solid #fff;
+            box-sizing: border-box;
+            border-radius: 50%;
+            left: -5px;
+            top: -5px;
+        }
 
-      &::after {
-        display: none;
-      }
+        &:hover::after {
+            border: 2px solid #969696;
+        }
+
+        &--choosen {
+            width: 40px;
+            height: 40px;
+            transform: translate(-1px, -5px);
+            box-sizing: border-box;
+            position: relative;
+            margin-right: 11px;
+
+            &::after {
+                display: none;
+            }
+        }
     }
-  }
 
-  &__RelLink {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: 2;
-  }
-
-  &__Gasket {
-    position: absolute;
-    background-color: #fff;
-    width: 35px;
-    height: 35px;
-    top: 50%;
-    left: 50%;
-    border-radius: 50%;
-    transform: translate(-50%, -50%);
-  }
-
-  &__RelatedImg {
-    border-radius: 50%;
-    width: 100%;
-    height: 100%;
-
-    &--top {
-      position: absolute;
-      border-radius: 50%;
-      width: 30px;
-      height: 30px;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+    &__RelLink {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        z-index: 2;
     }
-  }
+
+    &__Gasket {
+        position: absolute;
+        background-color: #fff;
+        width: 35px;
+        height: 35px;
+        top: 50%;
+        left: 50%;
+        border-radius: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    &__RelatedImg {
+        border-radius: 50%;
+        width: 100%;
+        height: 100%;
+
+        &--top {
+            position: absolute;
+            border-radius: 50%;
+            width: 30px;
+            height: 30px;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+    }
 }
